--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,21 +13,22 @@
     padding: 10px;
     font-size: 20px;
     cursor: pointer;
-    background: var(--main-blue);
+    background: var(--header-left);
     margin-right: var(--alignment);
     border-radius: 10px;
-    color: var(--lightest-green);
+    color: white;
     display: inline-block
 }
 .header::after{
     content: '';
     position: absolute;
-    background-image: linear-gradient(45deg, #29bae4 0%, #ee76ad 100%);
+    background-image: url("./header.svg"); /*linear-gradient(45deg, #29bae4 0%, #ee76ad 100%);*/
     top: -20px;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: -1;
     transform: skewY(-0.75deg);
-    border-bottom: 2px solid var(--lightest-green)
+    border-bottom: 2px solid var(--lightest);
+    box-shadow: 0 2px 20px 1px rgba(0, 0, 0, .5)
 }
