--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,9 @@ body {
   --header-right: #ee76ad;
   --form-bg: #6eeb83;
   --text-color: #190b28;
-  background-image: linear-gradient(45deg, var(--light), var(--lightest));
-  color: var(--text-color)
+  background-image: url("./background.svg"); /* linear-gradient(45deg, var(--light), var(--lightest)); */
+  color: var(--text-color);
+  overflow-y: hidden
 }
 .HemiHead{
   font-family: 'Hemi Head', sans-serif
